[package]
name = "blockchain_maker"
version = "0.1.0"
edition = "2021"
description = "A blockchain implementation in Rust using the Elliptic-curve cryptography and SHA-256 hashing algorithm"
license = "MIT"
readme = "README.md"
repository = "https://github.com/BDR-Pro/blockchain_maker"
keywords = ["blockchain", "rust", "elliptic-curve", "cryptography", "sha-256", "hashing", "algorithm"]
authors = ["BDR-Pro baderalotaibi3@gmail.com"]
categories = ["cryptography", "blockchain", "elliptic-curve", "rust", "sha-256", "hashing", "algorithm"]


[dependencies]
sha2 = "0.10"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
openssl = "0.10.64"


